# revit-mcp-python

./: README.md  README_zh.md  main.py  pyproject.toml
src/: __init__.py  main.py
src/tools/: ai_element_filter.py  color_elements.py  create_line_based_element.py  create_point_based_element.py  create_surface_based_element.py  delete_element.py  get_available_family_types.py  get_current_view_elements.py  get_current_view_info.py  get_selected_elements.py  operate_element.py  send_code_to_revit.py  tag_all_walls.py
src/utils/: connection_manager.py  socket_client.py
